# chatterbox-rvc-server

./: .gitignore  README.md  README_CLI.md  pyproject.toml  requirements.txt  run_cpu.sh  run_gpu.sh  server.py
cli/: __init__.py  __main__.py  app.py  audio_player.py  config.py  exceptions.py  http_client.py  main.py  state.py  ui.py
cli/commands/: __init__.py  base.py  benchmark.py  connect.py  get_model.py  get_voice.py  help.py  list_models.py  list_voices.py  say.py  set_model.py  set_voice.py
rvc/models/pretraineds/custom/: pretrains.json
server/: __init__.py  __main__.py  config.py
server/api/: __init__.py  endpoints.py  schemas.py
server/models/: __init__.py  chatterbox.py  rvc.py
server/utils/: __init__.py  audio.py  config.py  voice_scanning.py
server/voices/: __init__.py  manager.py
